@startuml alpha_zero

interface Action {
    + value(): Any
}

interface GameState {
    + depth(): int
    + current_player(): int
    + player0_board(): list[int]
    + player1_board(): list[int]
    + is_end(): bool
    + allowed_actions(): list[Action]
    + take_action(action: Action): GameState
}

interface Player {
    + take_action(state: GameState): Action
}

class Game {
    - _state: GameState
    - _player0: Player
    - _player1: Player
    + state(): GameState
    + step(): GameState
    + reset(): GameState
}

Game o--> GameState
Game o--> Player
GameState -> Action
Player -> GameState
Player -> Action

GameState <|.. ReversiState
Action <|.. ReversiAction
Player <|.. ReversiPlayer
ReversiState -> ReversiAction
ReversiPlayer -> ReversiAction
ReversiPlayer -> ReversiState

@enduml